...
        shape = RoundedCornerShape(12.dp)
    ) {
        Column(
            modifier = Modifier.padding(16.dp)
        ) {
            Text(
                text = "Información",
                style = MaterialTheme.typography.titleLarge,
                color = Color(0xFF0277BD),
                fontWeight = FontWeight.Bold
            )

            Row(
...
            .fillMaxWidth()
            .padding(horizontal = 16.dp, vertical = 8.dp),
        horizontalArrangement = Arrangement.SpaceBetween,
        verticalAlignment = Alignment.CenterVertically
    ) {
        Text(
            text = "Tracks",
            style = MaterialTheme.typography.titleLarge,
            color = Color(0xFF0277BD),
            fontWeight = FontWeight.Bold
        )

        Button(
...
